--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/alextay96
+spring.datasource.username=alextay96
 spring.datasource.password=Iamalextay96
 
 spring.jpa.show-sql=false
