Added ParserJson util

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=alextay96
 spring.datasource.password=Iamalextay96
 
 spring.jpa.show-sql=false
+server.tomcat.threads.max = 200
