--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=Iamalextay96
 
 spring.jpa.show-sql=false
 server.tomcat.threads.max = 200
+spring.jackson.parser.allow-single-quotes=true
